Trying with reducing iterations to prevent OOM
Signed-off-by: expani <anijainc@amazon.com>